Fix alignment on the footer and the mobile breakpoint of events

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -212,7 +212,10 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     flex-wrap: wrap;    
     list-style: none;
-    margin: 0 auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: auto;
+    margin-left: -30px;
     width: 100%;
     justify-content: space-evenly;
     white-space: nowrap;
